[package]
name = "twitter_event_driven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.16"
futures = "^0.3"
dotenv = "^0.15.0"
envy = "0.4"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.12.0", features = ["full"] }
yansi = "0.5.0"
chrono = "0.4.19"
twitter-stream = "0.13"
reqwest = { version = "0.11", features = ["json"] }
csv = "1.1.6"
